--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,6 @@ sniffio==1.3.1
 starlette==0.37.2
 typing_extensions==4.12.2
 uvicorn==0.30.5
+openai==0.28.0
+python-dotenv==1.0.0
+tiktoken==0.5.2
