--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
     "tailwindcss": "^3.4.9",
     "web-vitals": "^2.1.4"
   },
