--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,61 @@
+aiohappyeyeballs==2.3.7
+aiohttp==3.10.4
+aiosignal==1.3.1
 annotated-types==0.7.0
+anthropic==0.34.1
 anyio==4.4.0
+attrs==24.2.0
+beautifulsoup4==4.12.3
+cachetools==5.4.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
+distro==1.9.0
 fastapi==0.112.0
+filelock==3.15.4
+frozenlist==1.4.1
+fsspec==2024.6.1
+google==3.0.0
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.141.0
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.65.5
+grpcio-status==1.62.3
 h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.24.5
 idna==3.7
+jiter==0.5.0
+multidict==6.0.5
+openai==0.28.0
+packaging==24.1
 pillow==10.4.0
+proto-plus==1.24.0
+protobuf==4.25.4
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.8.2
 pydantic_core==2.20.1
-sniffio==1.3.1
-starlette==0.37.2
-typing_extensions==4.12.2
-uvicorn==0.30.5
-openai==0.28.0
+pyparsing==3.1.2
 python-dotenv==1.0.0
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+rsa==4.9
+sniffio==1.3.1
+soupsieve==2.6
+starlette==0.37.2
 tiktoken==0.5.2
+tokenizers==0.20.0
+tqdm==4.66.5
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
+uvicorn==0.30.5
+yarl==1.9.4
