--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "lucide-react": "^0.427.0",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
