update hardcoded port numbers

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "start": "PORT=$(node -e \"console.log(require('./src/config/config.json').frontend.port)\") react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
