--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
+    "babel-loader": "^9.2.1",
     "lucide-react": "^0.427.0",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
@@ -26,11 +28,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "PORT=$(node -e \"console.log(require('./src/config/config.json').frontend.port)\") react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-
+    "start": "PORT=$(node -e \"console.log(require('./src/config/config.json').frontend.port)\") react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
