--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,7 +33,7 @@ huggingface-hub==0.24.5
 idna==3.7
 jiter==0.5.0
 multidict==6.0.5
-openai==0.28.0
+openai>=1.12.0
 packaging==24.1
 pillow==10.4.0
 proto-plus==1.24.0
