--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.3.7
-aiohttp==3.11.0b0
+aiohttp==3.10.11
 aiosignal==1.3.1
 annotated-types==0.7.0
 anthropic==0.34.1
@@ -25,7 +25,7 @@ google-generativeai==0.7.2
 googleapis-common-protos==1.63.2
 grpcio==1.65.5
 grpcio-status==1.62.3
-h11==0.16.0
+h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
 httpx==0.27.0
@@ -50,7 +50,7 @@ requests==2.32.3
 rsa==4.9
 sniffio==1.3.1
 soupsieve==2.6
-starlette==0.40.0
+starlette==0.37.2
 tiktoken==0.5.2
 tokenizers==0.20.0
 tqdm==4.66.5
@@ -58,4 +58,4 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.2
 uvicorn==0.30.5
-yarl==1.9.4
+yarl==1.17.2
